--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ fire = "^0.4.0"
 loguru = "^0.6.0"
 tqdm = "^4.62.3"
 pandas = "^2.1.2"
+torch = "^2.1.0"
+nnunetv2 = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
