--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ tqdm = "^4.62.3"
 pandas = "^2.1.2"
 torch = "^2.1.0"
 nnunetv2 = "^2.2.1"
+streamlit = "^1.28.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
